--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<html> 
+<head>
+	<title> bahrcodes </title>
+	<link rel="stylesheet" href="style.css" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#002b36">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#002b36">
+</head>
+<body>
+
+<iframe name="swappable" src="ssaa.html"></iframe>
+
+<div class="nav">
+<p class="navtitle"> entries </p>
+<ul>
+<a href="ssaa.html" target="swappable">ssaa</a>
+</ul>
+<ul>
+<a href="first.html" target="swappable">h, i</a>
+</ul>
+<p class="footer">
+m@bahr.codes
+</p>
+</div>
+
+
+</body>
+</html>
